# pybolima

./: .gitignore  Makefile  README.md  pyproject.toml
pybolima/: dispatch.py  interface.py  load.py  stanza.py  tagger.py  transform.py  utility.py  workflow.py
scripts/: main.py
tests/: __init__.py  conftest.py  dispatch_test.py  load_test.py  tag_test.py
tests/test_data/: BLM-1943_#1.csv  BLM-1943_#1_document_index.csv  BLM-1953_#1.csv  BLM-1953_#1_document_index.csv  bolima_corpus_4pages.csv
